# lenticular-lens

./: .docker-env  .dockerignore  .env.example  .env.production  .gitignore  App.vue  Dockerfile  Dockerfile.flask_server  Dockerfile.jobs_worker  Dockerfile.postgres  Dockerfile.status_monitor  Dockerfile.timbuctoo_worker  Dockerfile.web  Dockerfile.web_server  Dockerfile.worker  classes.sparql  collection.py  conditions.py  config_db.py  database.ini  dataset.py  datasets_config.py  docker-compose.example.yml  docker-compose.yml  filter_function.py  helpers.py  linksets_collection.py  match.py  matching_functions.json  migrate.sql  nginx.conf  package.json  properties.sparql  psql.sh  pyproject.toml  readme.md  requirements.txt  resource.py  run.sh  run_gzip.py  (+8 more)
.github/workflows/: main.yml
common/: collection.py  config_db.py  dataset.py  datasets_config.py  helpers.py  timbuctoo.py
common/json/: matching_functions.json
components/: Match.vue  MatchCondition.vue  Resource.vue  ResourceFilterCondition.vue
docs/: schema.drawio
flask_server/: requirements.txt
flask_server/src/: server.py  status.py
flask_server/vue_app/: config_form.vue  main.js  vue.config.js
gui/react/: package-lock.json  package.json  tsconfig.json
gui/vue/: package-lock.json  package.json  vue.config.js
jobs_worker/: Dockerfile  requirements.txt
jobs_worker/src/: conditions.py  filter_function.py  filter_functions.json  jobs_worker.py  links_to_rdf.py  linksets_collection.py  match.py  matching_functions.json  resource.py  run_json.py  sql_functions.json  status.py  status.sh
k8s/: ingress.yml  postgres.service.yml  postgres.yml  worker.service.yml  workers.yml
lenticularlens/: run_all.py  run_web.py  run_worker.py
lenticularlens/api/: __init__.py  dependencies.py  oauth.py  socket.py
lenticularlens/data/: collection.py  dataset.py  dataset_info.py  entity_type.py  property.py  timbuctoo.py  timbuctoo_datasets.py
lenticularlens/elem/: dataset_reference.py  entity_type_selection.py  filter_function.py  lens.py  linkset.py  matching_method.py  matching_method_property.py  view.py
lenticularlens/job/: clusters_filter.py  export.py  job.py  lens_sql.py  links_filter.py  linkset_builder.py  linkset_validator.py  matching_sql.py  property_field.py  query_builder.py  transformer.py  upgrade.py  user.py  validation.py  visualize.py
postgres_timbuctoo/: Dockerfile
postgresql/: functions.py  requirements.txt  setup.sql
src/: run_all.py  setup.py  temp_update.py  web.py  worker.py
timbuctoo_worker/: Dockerfile
vue_app/: package-lock.json  package.json  vue.config.js
web_server/: Dockerfile  requirements.txt
(+867 files in other folders)
