[tool.poetry]
name = "lenticular-lens"
version = "1.26"
description = ""
readme = "readme.md"
package-mode = false
packages = [
    { include = "lenticularlens" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
python-multipart = "^0.0.22"
authlib = "^1.6.5"
python-socketio = "^5.14.2"
brotli-asgi = "^1.4.0"
cachetools = "^7.0.5"
schema = "^0.7.7"
kitchen = "^1.2.6"
psycopg = { version = "^3.2.10", extras = ["binary"] }
psycopg_pool = "^3.2.1"
networkx = "^3.6"
pyyaml = "^6.0.3"
pydantic = "^2.11.10"
python-intervals = "^1.10.0.post1"
rdflib = "^7.2.1"
requests = "^2.32.4"
unidecode = "^1.3.8"
xmltodict = "^1.0.2"
urllib3 = "^2.5.0"
anytree = "^2.12.1"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"
pyld = "^2.0.4"
sparqlwrapper = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
