[tool.poetry]
name = "lenticular-lens"
version = "1.31"
description = ""
readme = "readme.md"
package-mode = false
packages = [
    { include = "lenticularlens" }
]

[tool.poetry.dependencies]
python = "^3.14.3"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
python-multipart = "^0.0.28"
authlib = "^1.7.0"
python-socketio = "^5.14.2"
brotli-asgi = "^1.4.0"
cachetools = "^7.0.6"
schema = "^0.7.7"
psycopg = { version = "^3.3.3", extras = ["binary"] }
psycopg_pool = "^3.3.0"
pyyaml = "^6.0.3"
pydantic = "^2.13.3"
rdflib = "^7.2.1"
requests = "^2.34.0"
urllib3 = "^2.5.0"
anytree = "^2.12.1"
pyld = "^3.0.0"
sparqlwrapper = "^2.0.0"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
